== 1.11 ==
Erstellt: 17.08.10
Stable:
Neue Features:
- Vps_Date, Vps_DateTime
- CopyContent
- editComponents geht jetzt auch mit Table Generator
- MultiCheckbox: Alle / keine Links (standardmäßig aktiv)
- Volltextsuche
- Model_Mongo
- Model_MirrorCacheSimple
- AccessByMail Plugin
- (Multi)-FileUpload per html5 wenn moeglich, incl drag&drop support

möglicherweise nicht kompatible Änderungen:
- Vps_Date ist komplett inkompatibel (erbt nicht mehr von Zend_Date)
- Expr_Smaller -> Expr_Lower
- Expr_SmallerDate, Expr_HigherDate -> entfernt; Expr_Smaller kann dafür auch mit
  Vps_Date und Vps_DateTime umgehen
- Expr_Equal (Equals ist deprected)
- Menü-Komponenten: TemplateVars wurden geändert, ist jetzt ein array. Alle überschriebenen
  Templates müssen angepasst werden (bzw. schaun obs wirklich überschrieben werden muss)
- frontControllerClass MUSS in application/config.ini angegeben werden
- Tags in Seitenbaum gibts nicht mehr (kein Vps_Component_Acl->allowTag())
- aclClass MUSS in application/config.ini angegeben werden
- Columns admin ist jetzt keine Form mehr sondern ein Grid
- .webStandard strong/em/ol/ul/li ist jetzt im vps und sollte in webs entfernt werden

== 1.10 ==
Erstellt: 09.06.10
Stable: 16.08.10
Neue Features:
- Generator Plugins
- Generator Plugin: Tags
- needsParentComponentClass Setting, damit wird die $parentComponentClass bei getSettings
  übergeben
- ExtConfig ist eigene Klasse - statt Admin::getExtConfig, setzen über extConfig Setting
- Vpc_List_Switch hat transitions (fade ist jetzt standard) und die weiter-pfeile
  funktionieren über das ende hinaus und fangen wieder von vorn an
- Directory Administration: es gibt jetzt ExtConfigTabs
- Neues EyeCandy: Vps.Switch.Overlay
- Administrierbare Redirects

möglicherweise nicht kompatible Änderungen:
- editComponents werden im Seitenbaum nur mehr berücksichtigt wenn direkt unter der bearbeitenden Komponente liegen
  (indirekt nur wenn der ganze Pfad editComponents eingestellt hat)