@@ -11,6 +11,7 @@ Neue Features:
 - Model_MirrorCacheSimple
 - AccessByMail Plugin
 - (Multi)-FileUpload per html5 wenn moeglich, incl drag&drop support
+- Doppeltes bearbeiten von zB Directories ist mittels extConfigControllerIndex deaktivierbar
 
 möglicherweise nicht kompatible Änderungen:
 - Vps_Date ist komplett inkompatibel (erbt nicht mehr von Zend_Date)
